# qalf

./: CHANGELOG.md  LICENSE  Makefile  qalf.cabal
app/: Greet.hs  Main.hs  Todo.hs
