cabal-version:      3.0
name:               qalf
version:            0.1.0.0
synopsis:           simple backend in haskell
-- description:
license:            MIT
license-file:       LICENSE
author:             LitFill
maintainer:         marrazzy54@gmail.com
-- copyright:
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall -Wextra -Werror

executable qalf
    import:           warnings
    main-is:          Main.hs
    other-modules:    Greet, Todo
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1
                    , scotty
                    , text
                    , flow
                    , monad-logger
                    , wai

    hs-source-dirs:   app
    default-language: GHC2021
